--- a/haji.html
+++ b/haji.html
@@ -17,7 +17,7 @@
             <li><a href="">makan</a></li>
           </ul>
         </li>
-        <li><a href="marquee.html">profil</a></li>
+        <li><a href="index.html">profil</a></li>
         <li><a href="#">aboot</a></li>
         <li><a href="#">contec</a></li>
       </ul>
